org chart initialized

--- a/src/app/ng-org-chart/children-elements/children-elements.component.html
+++ b/src/app/ng-org-chart/children-elements/children-elements.component.html
@@ -1,5 +1,4 @@
-<div class="org-chart-children-elements">
-  <div *ngFor="let item of data">
-    <node-element [data]="item" [currentDepth]="currentDepth" [parentNode]="parentNode"></node-element>
-  </div>
-</div>
+<node-element class="child-element"
+              *ngFor="let item of data; let i = index" [data]="item" [currentDepth]="currentDepth"
+              [parentNode]="parentNode">
+</node-element>
