--- a/src/app/ng-org-chart/node-element/node-element.component.html
+++ b/src/app/ng-org-chart/node-element/node-element.component.html
@@ -1,4 +1,10 @@
-<div inject-node-element [component]="componentType" [data]="dataNode"></div>
-<div *ngIf="dataNode && dataNode.children && dataNode.children.length > 0 && currentDepth < maxDepth">
-  <children-elements [data]="dataNode.children" [currentDepth]="currentDepth + 1" [parentNode]="dataNode"></children-elements>
+<div class="node-element">
+  <div  inject-node-element [component]="componentType" [data]="dataNode"></div>
+  <div *ngIf="dataNode && dataNode.children && dataNode.children.length > 0 && currentDepth < maxDepth" class="children-part">
+    <div class="vertical-organization"></div>
+    <children-elements [data]="dataNode.children" [currentDepth]="currentDepth + 1" [parentNode]="dataNode"></children-elements>
+  </div>
 </div>
+
+
+
